--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,21 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.content {
+  padding: 24px;
+  margin: 0;
+  min-height: 280px;
+  width: 100%;
+}
+
+.main {
+  padding: 0 24px;
+  margin: 0;
+  min-height: 280px;
+  width: 100%;
+}
+
+.mb-2 {
+  margin-bottom: 1rem;
+}
